tests/typing/fail/0021-proji.ec
op foo (x:int * int) = x.`3.